# ultralytics-MOT-benchmark

./: .gitignore  README.md  custom_botsort.yaml  docker-compose.yml  main.py  parameter_testing_design.md  pyproject.toml  ultralytics_inference_video.py  video_crop_speed_up.py  yolov8_inference_video_範例.py
configs/: custom_botsort.yaml  test_config.yaml  track_configs.json
configs/templates/: botsort_template.yaml
parameter_tester/: advanced_visualizer.py  config_generator.py  parameter_generator.py  parameter_tester.py  result_collector.py  statistics_analyzer.py  test_config.yaml  test_executor.py  utils.py
src/ultralytics_mot_benchmark/: __init__.py
src/ultralytics_mot_benchmark/analysis/: __init__.py  tracking_metrics_analyzer.py  tracking_quality_analyzer.py
src/ultralytics_mot_benchmark/cli/: __init__.py  analyze_filter_logs.py  infer.py  video_crop_speed_up.py
src/ultralytics_mot_benchmark/parameter_testing/: __init__.py  data_validator.py  parallel_executor.py  parameter_generator.py  parameter_tester.py  report_generator.py  result_collector.py  statistics_analyzer.py  test_executor.py
tests/: conftest.py  test_improved_id_switch.py  test_tracking_metrics.py
